# aula_17_py_jornada

./: README.md  desafio.py  desafio_query.py  exemplo_02.py  meubanco.db  pyproject.toml
